--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,38 @@
-body {
-  margin: 0;
+html {
+  overflow: auto;
 }
 
+#root {
+  overflow: auto;
+  margin:0;
+  padding:0;
+}
+
+
+body {
+  margin:0;
+  padding:0;
+  overflow: auto;
+}
+
+.transparent {
+  background-color: rgba(245, 245, 245, 0.4) !important;
+  border: 0ex !important;
+}
+
+.nav-link.active {
+  background-color: rgba(245, 245, 245, 0.4) !important;
+  border: 0ex !important;
+}
+
+.nav-tabs {
+  border: 0ex !important;
+}
+
+.keepsize {
+  min-width: 35em !important;
+}
+
+.overflowauto {
+  overflow: auto;
+}
