--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,21 @@
 html {
-  overflow: auto;
+  min-height: 100%;
+  
 }
 
 #root {
-  overflow: auto;
   margin:0;
   padding:0;
+  
+  min-height: 100%;
+  height: 100vh;
 }
 
 
 body {
   margin:0;
   padding:0;
-  overflow: auto;
+  
 }
 
 .transparent {
@@ -38,6 +41,6 @@ body {
   padding-right: 0;
 }
 
-.overflowauto {
-  overflow: auto;
+canvas {
+  position: fixed !important;
 }
